[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi>=0.135.3,<0.136.0",
    "uvicorn>=0.44.0,<0.45.0",
    "pandas>=3.0.2,<4.0.0",
    "openai (>=2.32.0,<3.0.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langgraph (>=1.1.6,<2.0.0)",
    "langchain-openai (>=1.1.14,<2.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "streamlit (>=1.56.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "black>=26.3.1,<27.0.0",
    "httpx>=0.28.1,<0.29.0"
]